// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/gradle/gradle-updates-report createRenovateGradlePlugin generates a report for the project minimal-project, with Gradle version 5 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "group": "org.apache.commons",
        "name": "commons-collections4",
        "version": "4.4",
      },
    ],
    "project": "minimal-test",
    "repositories": Array [
      "https://jcenter.bintray.com/",
      "https://plugins.gradle.org/m2",
    ],
    "version": "unspecified",
  },
]
`;

exports[`manager/gradle/gradle-updates-report createRenovateGradlePlugin generates a report for the project minimal-project, with Gradle version 6 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "group": "org.apache.commons",
        "name": "commons-collections4",
        "version": "4.4",
      },
    ],
    "project": "minimal-test",
    "repositories": Array [
      "https://jcenter.bintray.com/",
      "https://plugins.gradle.org/m2",
    ],
    "version": "unspecified",
  },
]
`;

exports[`manager/gradle/gradle-updates-report createRenovateGradlePlugin generates a report for the project minimal-project-with-version, with Gradle version 5 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "group": "org.apache.commons",
        "name": "commons-collections4",
        "version": "4.4",
      },
    ],
    "project": "minimal-test-with-version",
    "repositories": Array [
      "https://jcenter.bintray.com/",
      "https://plugins.gradle.org/m2",
    ],
    "version": "1.2.3",
  },
]
`;

exports[`manager/gradle/gradle-updates-report createRenovateGradlePlugin generates a report for the project minimal-project-with-version, with Gradle version 6 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "group": "org.apache.commons",
        "name": "commons-collections4",
        "version": "4.4",
      },
    ],
    "project": "minimal-test-with-version",
    "repositories": Array [
      "https://jcenter.bintray.com/",
      "https://plugins.gradle.org/m2",
    ],
    "version": "1.2.3",
  },
]
`;
